--- a/c/correction.html
+++ b/c/correction.html
@@ -1,1 +1,21 @@
-
+"past simple"
+<br>
+"present perfect continuous"
+<br>
+"present perfect"
+<br>
+"present simple"
+<br>
+"present continuous"
+<br>
+"past perfect continuous"
+<br>
+"future simple"
+<br>
+"past continuous"
+<br>
+"past perfect"
+<br>
+"future perfect"
+<br>
+"future continuous"
