--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 			<div class="row">
 				<div class="col-6">
-					<h5>Do you know if she will be there ?</h5>
+					<h5>Do you know if she is there ?</h5>
 				</div>
 			
 				<div class="col-6">
